src/objects/Lead_Reporting__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <formula>IF( OR(ISBLANK(Lead__c), Lead__r.IsConverted ),  Opportunity__r.Property__r.Property_City__c   ,  Lead__r.City  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Detail__c</fullName>
        <formula>IF( OR(ISBLANK(Lead__c), Lead__r.IsConverted ),   Opportunity__r.Contact_Detail__c ,  Lead__r.Contact_Detail__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <formula>IF( OR(ISBLANK(Lead__c), Lead__r.IsConverted ), IF(ISBLANK(Opportunity__r.Property__r.QAS_Property_County__c), TEXT( Opportunity__r.Property__r.Property_County__c ),Opportunity__r.Property__r.QAS_Property_County__c)   ,   IF(ISBLANK(Lead__r.QAS_County__c),TEXT(Lead__r.County__c),Lead__r.QAS_County__c)  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imported_Lead_Created_Date__c</fullName>
        <description>Initial Load of Lead Created Date</description>
        <inlineHelpText>Initial Load of Lead Created Date</inlineHelpText>
        <label>Imported Lead Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <formula>IF( OR(ISBLANK(Lead__c), Lead__r.IsConverted ),  TEXT(Opportunity__r.LeadSource)   ,  TEXT(Lead__r.LeadSource)  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadSource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date__c</fullName>
        <description>Date/Time Lead was Created</description>
        <formula>BLANKVALUE(Lead__r.CreatedDate, Imported_Lead_Created_Date__c)</formula>
        <inlineHelpText>Date/Time Lead was Created</inlineHelpText>
        <label>Lead Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <formula>IF( OR(ISBLANK(Lead__c), Lead__r.IsConverted ),  TEXT(Opportunity__r.Lead_Source_Detail__c)   ,  TEXT(Lead__r.Lead_Source_Detail__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Source Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Lead_Source_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Method_of_Contact__c</fullName>
        <formula>IF( OR(ISBLANK(Lead__c), Lead__r.IsConverted ),   Opportunity__r.Method_of_Contact__c , TEXT(Lead__r.Method_of_Contact__c)  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method of Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>IF( OR(ISBLANK(Lead__c), Lead__r.IsConverted ),  Opportunity__r.Account.Name , Lead__r.FirstName + &apos; &apos;+ Lead__r.LastName )</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Lead_Source_Reporting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <formula>IF( OR(ISBLANK(Lead__c), Lead__r.IsConverted ),  Opportunity__r.Property__r.Property_ZIP__c  ,  Lead__r.PostalCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PostalCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Source_Campaign__c</fullName>
        <formula>IF( OR(ISBLANK(Lead__c), Lead__r.IsConverted ),   Opportunity__r.Account.Primary_Source_Campaign__r.Name    ,  Lead__r.Primary_Source_Campaign__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Source Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Account__c</fullName>
        <formula>IF( OR(ISBLANK(Lead__c), Lead__r.IsConverted ),   Opportunity__r.Referring_Account__r.Name   ,  Lead__r.Referring_Account__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referring Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <formula>IF( OR(ISBLANK(Lead__c), Lead__r.IsConverted ), TEXT(Opportunity__r.Sales_Region__c) , TEXT(Lead__r.Sales_Region__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Lead_Source_Detail__c</fullName>
        <formula>IF( OR(ISBLANK(Lead__c), Lead__r.IsConverted ),  TEXT(Opportunity__r.Second_Lead_Source_Detail__c)   ,  TEXT(Lead__r.Second_Lead_Source_Detail__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Second Lead Source Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Lead_Source__c</fullName>
        <formula>IF( OR(ISBLANK(Lead__c), Lead__r.IsConverted ),  TEXT(Opportunity__r.Second_Lead_Source__c)   ,  TEXT(Lead__r.Second_Lead_Source__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Second Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Referring_Account__c</fullName>
        <formula>IF( OR(ISBLANK(Lead__c), Lead__r.IsConverted ),  Opportunity__r.Secondary_Referring_Account__r.Name   ,  Lead__r.Secondary_Referring_Account__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Referring Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Source_Campaign__c</fullName>
        <formula>IF( OR(ISBLANK(Lead__c), Lead__r.IsConverted ), Opportunity__r.Secondary_Source_Campaign__c , Lead__r.Secondary_Source_Campaign__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Source Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>IF( OR(ISBLANK(Lead__c), Lead__r.IsConverted ), TEXT(Opportunity__r.Property__r.Property_State__c), Lead__r.State )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <formula>IF( OR(ISBLANK(Lead__c), Lead__r.IsConverted ),  Opportunity__r.Property__r.Name , Lead__r.Street )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <label>Lead Reporting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Name__c</columns>
        <columns>Lead__c</columns>
        <columns>Opportunity__c</columns>
        <columns>LeadSource__c</columns>
        <columns>Lead_Source_Detail__c</columns>
        <columns>Primary_Source_Campaign__c</columns>
        <columns>Referring_Account__c</columns>
        <columns>Sales_Region__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>County__c</columns>
        <columns>PostalCode__c</columns>
        <columns>Method_of_Contact__c</columns>
        <columns>Contact_Detail__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LR-{0000000}</displayFormat>
        <label>Lead Reporting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Reporting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>